--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -60,7 +60,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>za.co.auri.AuriiBackendApplication</mainClass>
+                    <mainClass>za.co.aurii.AuriiBackendApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
