--- a/Core/src/main/resources/application.yaml
+++ b/Core/src/main/resources/application.yaml
@@ -4,3 +4,9 @@ spring:
 
 server:
   port: 8080
+
+llm:
+  client: 'ollama'
+  apiKey: 'none'
+  apiUrl: 'http://localhost:11434'
+  defaultModel: 'deepseek-r1:7b'
