--- a/Core/src/main/resources/application.yaml
+++ b/Core/src/main/resources/application.yaml
@@ -2,9 +2,10 @@ spring:
   application:
     name: aurii-backend
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
     username: sa
     password: password
+    driver-class-name: org.h2.Driver
   h2:
     console:
       enabled: true
@@ -16,6 +17,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
   flyway:
     enabled: true
     baseline-on-migrate: true
