@Ruben - Fixed version to build andorid on

--- a/aurii-frontend/aurii-app/android/app/build.gradle
+++ b/aurii-frontend/aurii-app/android/app/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     namespace "io.ionic.starter"
+    compileSdkVersion 36
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "io.ionic.starter"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        targetSdkVersion 36
+        minSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
