--- a/aurii-frontend/aurii-app/android/app/src/main/AndroidManifest.xml
+++ b/aurii-frontend/aurii-app/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <uses-permission android:name="android.permission.READ_HEALTH_DATA" />
   <uses-permission android:name="android.permission.WRITE_HEALTH_DATA" />
-
+  <uses-permission android:name="android.permission.health.READ_HEART_RATE"/>
+  <uses-permission android:name="android.permission.health.WRITE_HEART_RATE"/>
+  <uses-permission android:name="android.permission.health.READ_STEPS"/>
+  <uses-permission android:name="android.permission.health.WRITE_STEPS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
