--- a/aurii-frontend/aurii-app/package.json
+++ b/aurii-frontend/aurii-app/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "build:android": "ionic build && npx cap sync android && npx cap copy android && npx cap open android"
   },
   "private": true,
   "dependencies": {
