Integrated Questionnaire feature across coach module.
- Added `QuestionnaireService` for fetching and managing questionnaires.
- Enhanced `WizardComponent` with dynamic plan selection and service integration.
- Introduced `Questionnaire` model for type-safe interactions.
- Updated `ActivityController` and `QuestionnaireController` with `@CrossOrigin` support.
- Configured proxy for API requests in Angular app.
- Improved routing and UI for coach screens using Ionic components.
- Tweaked JSON resources for sample questionnaires.
- Updated environment configuration for coachService URL.

--- a/aurii-frontend/aurii-app/angular.json
+++ b/aurii-frontend/aurii-app/angular.json
@@ -86,6 +86,9 @@
               "progress": false
             }
           },
+          "options": {
+            "proxyConfig": "./proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
