--- a/Core/src/main/resources/application.yaml
+++ b/Core/src/main/resources/application.yaml
@@ -23,6 +23,15 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration
     validate-on-migrate: true
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
+  spring:
+    jpa:
+      hibernate:
+        ddl-auto: create-drop
 
 server:
   port: 8080
